--- a/posts/templates/posts/homepage.html
+++ b/posts/templates/posts/homepage.html
@@ -45,7 +45,7 @@
 
                                 <h2 style="padding:10px;padding-top:0px;"> {{ post.header }}</h2>
 
-                                <p>{{ post.description }}<a id="detail-link" href="{% url 'posts:detail' header=post.header %}">بیشتر</a>
+                                <p>{{ post.description|safe }}<a id="detail-link" href="{% url 'posts:detail' header=post.header %}">بیشتر</a>
                                 </p>
 </div>
                                   <ul class="list-inline" style="padding-right:0px;">
