--- a/posts/static/posts/base.css
+++ b/posts/static/posts/base.css
@@ -183,6 +183,8 @@ width:0px;
 right: 0;
 background-color:#111;
 overflow-x: hidden;
+
+overflow-y: auto;
 transition: 0.5s;
 top: 108px;
                                 /*    adding shadow to Side Nav                    */
@@ -212,6 +214,12 @@ box-shadow: 0 8px 6px -6px black;
 #SideNav a:hover {
     color: #f1f1f1;
 }
+
+#SideNav .create-account a{
+
+color:#fff;
+}
+
 #SideNav span{
 
 padding:10px;
