--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -189,8 +189,8 @@
                 <div class="text-center">
 
 
-                    <button class="btn btn-primary btn-sm" style="padding:0px 5px;"><a href="{% url 'user:register' %}">
-                        ساختن حساب </a></button>
+                    <a class="btn btn-primary btn-sm" href="{% url 'user:register' %}">
+                        ساختن حساب </a>
                 </div>
 
 
