--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -27,7 +27,7 @@
 
 <body>
 <div class="navbar navbar-fixed-top">
-    <nav class="navbar navbar-default  " id="navbar1">
+    <nav class="navbar navbar-default" id="navbar1" >
         <div class="container-fluid">
 
  <button type="button" id="left-side-toggle-open"
@@ -52,10 +52,10 @@
                 </a>
             </div>
 
-            <div class="collapse navbar-collapse">
+            <div class="collapse navbar-collapse" style="float:right;">
 
 
-                <p class="navbar-text navbar-left"><a href="/news/" class="navbar-link">اخبار</a>
+                <p class="navbar-text"><a href="/news/" class="navbar-link">اخبار</a>
                 </p>
                 <ul class="nav navbar-nav ">
 
@@ -184,13 +184,13 @@
 
 
             </form>
-            <p id="register-label"> برای عضویت روی ساختن حساب کلیک کنید </p>
+            <p id="register-label"> برای عضویت روی ایجاد حساب کلیک کنید </p>
             <div class="create-account" style="margin:10px 10px;">
                 <div class="text-center">
 
 
                     <a class="btn btn-primary btn-sm" href="{% url 'user:register' %}">
-                        ساختن حساب </a>
+                        ایجاد حساب </a>
                 </div>
 
 
