--- a/users/templates/users/UsersContact.html
+++ b/users/templates/users/UsersContact.html
@@ -13,8 +13,11 @@
 <div class="jumbotron" id="contact-content">
     <div class="container">
 
+    <h2 id="contact-header">تماس با ما </h2>
+    <p>-شما میتوانید از طریق فرم زیر پیامتان را بما بفرستید یا از طریق آیدی تلگرام ما باما در تماس باشید :</p>
 
-        <h2>تماس با ما </h2>
+        <p>-آیدی تلگرام<a href="https://t.me/TAHLILGARAN_SUPPORT"> :TAHLILGARAN_SUPPORT@</a></p>
+
         <form method="POST" class="">
             {% csrf_token %}
 
