--- a/users/static/users/GuestContact.css
+++ b/users/static/users/GuestContact.css
@@ -4,7 +4,8 @@ background-image: url("contact-us.png");
 background-size: 1366px 800px;
 background-attachment: fixed;
 color:#fff;
-margin-top:56px;
+
+
 }
 
 #navbar2{
@@ -25,28 +26,55 @@ top:56px;
 
 
 #contact-content{
-
-background-color:transparent;
+padding-top:0px;
+padding-bottom:0px;
+background-color:rgba(16, 16, 18, 0.5);
 position:relative;
-
 padding-bottom:20px;
 
 }
 
-#contact-content .container{
+#contact-content .container-fluid{
 
 margin:0px;
 
 }
+#contact-header{
 
-#contact-content .container form{
+text-align:right;
+margin:20px auto;
+padding-bottom:15px;
+border-bottom:2px solid #fff;
+
+}
+#contact-content .container-fluid p,a{
+
+font-size:16px;
+
+}
+
+
+#contact-content .container-fluid form{
 
 max-width:380px;
-background-color:rgba(16, 16, 18, 0.5);
 
 
 }
 
+
+#contact-content .container-fluid form #contact-header{
+
+
+text-align:center;
+background-color:rgba(16, 16, 18, 0.8);
+height:50px;
+
+}
+#telegram-id{
+
+font-size:17px;
+
+}
 #contact-content .form-control{
 
 box-shadow:none;
@@ -69,8 +97,8 @@ padding:5px;
 
 #contact-content .form-control{
 
-width:100%px;
-
+width:100%;
+border-radius: 0px
 }
 
 #contact-content textarea.form-control  {
