--- a/users/templates/users/reg_form.html
+++ b/users/templates/users/reg_form.html
@@ -188,9 +188,8 @@
                 <ul class="password-warning ">
 
                     <li>پسورد شما نباید شبیه هیچکدام از اطلاعات شخصی شما باشد.</li>
-                    <li>پسورد شما نمیتواند پسوردی باشد که قبلا استفاده شده.</li>
                     <li>پسورد شما باید حداقل 8 حرفی باشد.</li>
-                    <li>پسورد شما باید هم شامل عدد و هم شامل حروف باشد.</li>
+                    <li>پسورد شما  نباید کاملا عددی باشد.</li>
                 </ul>
             </div>
 
