--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -12,17 +12,18 @@
 <div class="container" id="login-container">
 
     <div id="info">
-<div>
-
+<div id="info-header">
+    <a >نوسان گلد</a>
+    <br>
+    <span> سایت تحلیلی خبری ارز </span>
 </div>
         <ul>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
+           <li><span class="material-icons">show_chart</span> چارت </li>
+            <li><span class="glyphicon glyphicon-signal"></span> نوسان های ارز</li>
+            <li><span class="glyphicon glyphicon-book"></span>آرشیو مقالات</li>
+            <li><span class="glyphicon glyphicon-calendar"></span> تقویم اقتصادی</li>
 
-            <li>4</li>
 
-            <li>5</li>
 
 
         </ul>
