wsgi and product setting changed

--- a/users/templates/users/reg_form.html
+++ b/users/templates/users/reg_form.html
@@ -118,7 +118,7 @@
 
                     <option value="خراسان جنوبی">خراسان_جنوبی</option>
 
-                    <option value="خراسان_رضوی">خراسان_رضوی</option>
+                    <option value="خراسان رضوی">خراسان_رضوی</option>
 
                     <option value="خراسان شمالی">خراسان_شمالی</option>
 
