--- a/users/templates/users/reset_password_email.html
+++ b/users/templates/users/reset_password_email.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+
 </head>
 <body>
 
+<a href="http://navasangold.com/user/reset-password/confirm/{{token}}">http://navasangold.com/user/reset-password/confirm/{{token}}</a>
 </body>
 </html>
