--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -40,6 +40,15 @@
 
 </div>
             <hr>
+            <div id="author-bio">
+                <!--
+
+                bio !!!
+
+
+
+                -->
+            </div>
         </footer>
         <div class="comment-counter text-center" >
 
