--- a/posts/static/posts/homepage.css
+++ b/posts/static/posts/homepage.css
@@ -4,12 +4,27 @@
 width:100%;
 position:relative;
 padding-top:0px;
+
 }
+
+#right-side .post{
+
+
+background-color:#f4f4f4;
+
+
+}
+#right-side .row{
+
+background-color:#fff;
+box-shadow: 0px 1px 4px #bbb;
+
+}
+
 
 #right-side .jumbotron{
 
-
-background-color:#fff;
+background-color:transparent;
 padding-top:0px;
 padding-left:0px;
 padding-right:0px;
@@ -17,12 +32,14 @@ padding-right:0px;
 
 }
 
+
 #right-side .jumbotron .row{
 
-border: 1px solid rgba(0, 0, 0, .09);
-padding:0px;
 margin:0;
 margin-top:20px;
+border: 1px solid rgba(0, 0, 0, .09);
+padding:0px;
+
 
 }
 
