big change: new app added :speceficpages css files and js and png files separated pages like contact-us advertising,... added to speceficpages

--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-    <link rel="stylesheet" type="text/css" href="{% static 'posts/base.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'posts/css/base.css' %}">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
@@ -37,7 +37,7 @@
                 <i class="material-icons" id="arrow-forward">arrow_forward</i>
 
             </button>
-              <a class="navbar-brand navbar-right" href="{% url 'posts:home' %}">
+              <a class="navbar-brand" href="{% url 'posts:home' %}">
                     Navasan
                 </a>
 
@@ -266,8 +266,8 @@
 </footer>
 </body>
 
-<script src="{% static 'posts/jquery.validate.js' %}"></script>
-<script src="{% static 'posts/base.js' %}"></script>
+<script src="{% static 'posts/js/jquery.validate.js' %}"></script>
+<script src="{% static 'posts/js/base.js' %}"></script>
 
 {% block script %}
 {% endblock %}
