--- a/users/templates/users/edit_profile.html
+++ b/users/templates/users/edit_profile.html
@@ -4,7 +4,7 @@
 <!-- The block below overwrites block in base -->
 
 {% block style %}
-<link rel="stylesheet" type="text/css" href="{% static 'users/edit_profile.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'users/css/edit_profile.css' %}"/>
 {% endblock %}
 {% block body %}
 
