--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,7 +1,7 @@
 {% extends 'posts/base.html' %}
 {% load staticfiles %}
 {% block style %}
-<link rel="stylesheet" type="text/css" href="{% static 'users/login.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'users/css/login.css' %}"/>
 {% endblock %}
 {% block title %}
 <title>ورود</title>
@@ -139,5 +139,5 @@
 </div>
 {% endblock %}
 {% block script %}
-<script src="{% static 'users/login.js' %}"></script>
+<script src="{% static 'users/js/login.js' %}"></script>
 {% endblock %}
