--- a/users/templates/users/reg_form.html
+++ b/users/templates/users/reg_form.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 {% block style %}
-<link rel="stylesheet" type="text/css" href="{% static 'users/reg-form.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'users/css/reg-form.css' %}"/>
 {% endblock %}
 {% block title %}
 <title>فرم ثبت نام</title>
@@ -212,6 +212,6 @@
 {% endblock %}
 
 {% block script %}
-<script src="{% static 'users/reg-form.js' %}"></script>
+<script src="{% static 'users/js/reg-form.js' %}"></script>
 
 {% endblock %}
