--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,7 +2,7 @@
 {% load tz %}
 {% load staticfiles %}
 {% block style %}
-<link rel="stylesheet" type="text/css" href="{% static 'users/profile.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'users/css/profile.css' %}"/>
 {% endblock %}
 {% block title %}
 <title>صفحه کاربری</title>
