advertising page and rules page added and allowed hosts edited

--- a/posts/templates/posts/homepage.html
+++ b/posts/templates/posts/homepage.html
@@ -98,12 +98,12 @@
     <div class="hidden-xs hidden-sm col-md-4" style="float:left; " id="left-side">
 
 
-        <div class="jumbotron" style=" ">
-            <div class="container" style="margin-top:20px; border-right: 1px solid rgba(0, 0, 0, .09);">
+        <div class="jumbotron">
+            <div class="container">
 
                     <p>1 جدول سهام</p>
 
-                </div>
+
 
                 <div class="stock-table">
                     <p>2 جدول سهام</p>
@@ -129,6 +129,6 @@
         </div>
 
     </div>
-
+</div>
 
 {% endblock %}
