--- a/posts/static/posts/css/base.css
+++ b/posts/static/posts/css/base.css
@@ -481,7 +481,7 @@ padding:20px;
                             /*        footer setting started                */
 footer{
 position:absolute;
-
+bottom:0px;
 left:0px;
 right:0px;
 font-family:'Far.Adab',Tahoma, Sans-Serif;
