--- a/posts/static/posts/css/homepage.css
+++ b/posts/static/posts/css/homepage.css
@@ -119,6 +119,11 @@ box-shadow:none;
 background-color:#fff;
 padding-right:0px;
 padding-left:0px;
+padding-top:0px;
+}
+#left-side .jumbotron .container{
+
+margin-top:20px;
 
 }
 
