--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -245,12 +245,12 @@
                         <div class="col-12">
 
                             <a href="https:/www.telegram.com/"><img id="telegram-icon"
-                                                                    src="{% static 'posts/telegram.png' %}"
+                                                                    src="{% static 'posts/img/telegram.png' %}"
                             ></a>
                             <a href="https://instagram.com/"><img id="instagram-icon"
-                                                                  src="{% static 'posts/instagram.png' %}"></a>
+                                                                  src="{% static 'posts/img/instagram.png' %}"></a>
 
-                            <a href="https://twitter.com/"><img id="twitter-icon" src="{% static 'posts/twitter.png' %}"
+                            <a href="https://twitter.com/"><img id="twitter-icon" src="{% static 'posts/img/twitter.png' %}"
                             ></a>
 
 
