--- a/specificpages/static/specificpages/css/datepicker.css
+++ b/specificpages/static/specificpages/css/datepicker.css
@@ -1,207 +1,205 @@
-.qs-datepicker {
-  color: black;
-  position: absolute;
-  width: 250px;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-      flex-direction: column;
-  font-family: sans-serif;
-  font-size: 14px;
-  z-index: 9001;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  border: 1px solid gray;
-  border-radius: 4.22275px;
-  overflow: hidden;
-  background: white;
-  box-shadow: 0 20px 20px -15px rgba(0, 0, 0, 0.3);
-}
-.qs-datepicker * {
-  box-sizing: border-box;
-}
-.qs-datepicker.qs-hidden {
-
-}
-.qs-datepicker .qs-overlay {
-  position: absolute;
-  top: 0;
+/*!
+ * Datepicker v0.6.3
+ * https://github.com/fengyuanchen/datepicker
+ * 
+ * Copyright (c) 2014-2017 Fengyuan Chen
+ * Released under the MIT license
+ * 
+ * Date: 2017-09-29T14:28:02.764Z
+ */
+.datepicker-container {
+  background-color: #fff;
+  direction: ltr;
+  font-size: 12px;
   left: 0;
-  background: rgba(0, 0, 0, 0.75);
-  color: white;
-  width: 100%;
-  height: 100%;
-  padding: .5em;
-  z-index: 1;
-  opacity: 1;
-  transition: opacity 0.3s;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-      flex-direction: column;
-  -ms-flex-align: center;
-      align-items: center;
-}
-.qs-datepicker .qs-overlay.qs-hidden {
-  opacity: 0;
+  line-height: 30px;
+  position: fixed;
+  top: 0;
+  -ms-touch-action: none;
+  touch-action: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 210px;
   z-index: -1;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
 }
-.qs-datepicker .qs-overlay .qs-close {
-  -ms-flex-item-align: end;
-      align-self: flex-end;
-  display: inline-table;
-  padding: .5em;
-  line-height: .77;
-  cursor: pointer;
-  position: absolute;
-}
-.qs-datepicker .qs-overlay .qs-overlay-year {
+
+.datepicker-container::before,
+.datepicker-container::after {
+  border: 5px solid transparent;
+  content: " ";
   display: block;
-  border: none;
-  background: transparent;
-  border-bottom: 1px solid white;
-  border-radius: 0;
-  color: white;
-  font-size: 14px;
-  padding: .25em 0;
-  margin: auto 0 .5em;
-  width: calc(100% - 1em);
-}
-.qs-datepicker .qs-overlay .qs-overlay-year::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-}
-.qs-datepicker .qs-overlay .qs-submit {
-  border: 1px solid white;
-  border-radius: 4.22275px;
-  padding: .5em;
-  margin: 0 auto auto;
-  cursor: pointer;
-  background: rgba(128, 128, 128, 0.4);
-}
-.qs-datepicker .qs-overlay .qs-submit.qs-disabled {
-  color: gray;
-  border-color: gray;
-  cursor: not-allowed;
-}
-.qs-datepicker .qs-controls {
-  width: 100%;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: justify;
-      justify-content: space-between;
-  -ms-flex-align: center;
-      align-items: center;
-  -ms-flex-positive: 1;
-      flex-grow: 1;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  background: lightgray;
-  filter: blur(0px);
-  transition: filter 0.3s;
-}
-.qs-datepicker .qs-controls.qs-blur {
-  filter: blur(5px);
-}
-.qs-datepicker .qs-arrow {
-  height: 25px;
-  width: 25px;
-  position: relative;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background .15s;
-}
-.qs-datepicker .qs-arrow:hover {
-  background: rgba(0, 0, 0, 0.1);
-}
-.qs-datepicker .qs-arrow:hover.qs-left:after {
-  border-right-color: black;
-}
-.qs-datepicker .qs-arrow:hover.qs-right:after {
-  border-left-color: black;
-}
-.qs-datepicker .qs-arrow:after {
-  content: '';
-  border: 6.25px solid transparent;
+  height: 0;
   position: absolute;
-  top: 50%;
-  transition: border .2s;
+  width: 0;
 }
-.qs-datepicker .qs-arrow.qs-left:after {
-  border-right-color: gray;
-  right: 50%;
-  transform: translate(25%, -50%);
+
+.datepicker-dropdown {
+  border: 1px solid #ccc;
+  -webkit-box-shadow: 0 3px 6px #ccc;
+  box-shadow: 0 3px 6px #ccc;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+  position: absolute;
+  z-index: 1;
 }
-.qs-datepicker .qs-arrow.qs-right:after {
-  border-left-color: gray;
-  left: 50%;
-  transform: translate(-25%, -50%);
+
+.datepicker-inline {
+  position: static;
 }
-.qs-datepicker .qs-month-year {
-  font-weight: bold;
-  transition: border .2s;
-  border-bottom: 1px solid transparent;
+
+.datepicker-top-left,
+.datepicker-top-right {
+  border-top-color: #39f;
+}
+
+.datepicker-top-left::before,
+.datepicker-top-left::after,
+.datepicker-top-right::before,
+.datepicker-top-right::after {
+  border-top: 0;
+  left: 10px;
+  top: -5px;
+}
+
+.datepicker-top-left::before,
+.datepicker-top-right::before {
+  border-bottom-color: #39f;
+}
+
+.datepicker-top-left::after,
+.datepicker-top-right::after {
+  border-bottom-color: #fff;
+  top: -4px;
+}
+
+.datepicker-bottom-left,
+.datepicker-bottom-right {
+  border-bottom-color: #39f;
+}
+
+.datepicker-bottom-left::before,
+.datepicker-bottom-left::after,
+.datepicker-bottom-right::before,
+.datepicker-bottom-right::after {
+  border-bottom: 0;
+  bottom: -5px;
+  left: 10px;
+}
+
+.datepicker-bottom-left::before,
+.datepicker-bottom-right::before {
+  border-top-color: #39f;
+}
+
+.datepicker-bottom-left::after,
+.datepicker-bottom-right::after {
+  border-top-color: #fff;
+  bottom: -4px;
+}
+
+.datepicker-top-right::before,
+.datepicker-top-right::after,
+.datepicker-bottom-right::before,
+.datepicker-bottom-right::after {
+  left: auto;
+  right: 10px;
+}
+
+.datepicker-panel > ul {
+  margin: 0;
+  padding: 0;
+  width: 102%;
+}
+
+.datepicker-panel > ul::before,
+.datepicker-panel > ul::after {
+  content: " ";
+  display: table;
+}
+
+.datepicker-panel > ul::after {
+  clear: both;
+}
+
+.datepicker-panel > ul > li {
+  background-color: #fff;
   cursor: pointer;
+  float: left;
+  height: 30px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  width: 30px;
 }
-.qs-datepicker .qs-month-year:hover {
-  border-bottom: 1px solid gray;
+
+.datepicker-panel > ul > li:hover {
+  background-color: rgb(229, 242, 255);
 }
-.qs-datepicker .qs-month-year:focus,
-.qs-datepicker .qs-month-year:active:focus {
-  outline: none;
+
+.datepicker-panel > ul > li.muted,
+.datepicker-panel > ul > li.muted:hover {
+  color: #999;
 }
-.qs-datepicker .qs-month {
-  padding-right: .5ex;
+
+.datepicker-panel > ul > li.highlighted {
+  background-color: rgb(229, 242, 255);
 }
-.qs-datepicker .qs-year {
-  padding-left: .5ex;
+
+.datepicker-panel > ul > li.highlighted:hover {
+  background-color: rgb(204, 229, 255);
 }
-.qs-datepicker .qs-squares {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding: 5px;
-  filter: blur(0px);
-  transition: filter 0.3s;
+
+.datepicker-panel > ul > li.picked,
+.datepicker-panel > ul > li.picked:hover {
+  color: #39f;
 }
-.qs-datepicker .qs-squares.qs-blur {
-  filter: blur(5px);
-}
-.qs-datepicker .qs-square {
-  width: 14.28571429%;
-  height: 25px;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
-      align-items: center;
-  -ms-flex-pack: center;
-      justify-content: center;
-  cursor: pointer;
-  transition: background .1s;
-  border-radius: 4.22275px;
-}
-.qs-datepicker .qs-square.qs-current {
-  font-weight: bold;
-}
-.qs-datepicker .qs-square.qs-active {
-  background: lightblue;
-}
-.qs-datepicker .qs-square.qs-disabled span {
-  opacity: .2;
-}
-.qs-datepicker .qs-square.qs-empty {
+
+.datepicker-panel > ul > li.disabled,
+.datepicker-panel > ul > li.disabled:hover {
+  background-color: #fff;
+  color: #ccc;
   cursor: default;
 }
-.qs-datepicker .qs-square.qs-disabled {
-  cursor: not-allowed;
+
+.datepicker-panel > ul > li.disabled.highlighted,
+.datepicker-panel > ul > li.disabled:hover.highlighted {
+  background-color: rgb(229, 242, 255);
 }
-.qs-datepicker .qs-square.qs-day {
+
+.datepicker-panel > ul > li[data-view="years prev"],
+.datepicker-panel > ul > li[data-view="year prev"],
+.datepicker-panel > ul > li[data-view="month prev"],
+.datepicker-panel > ul > li[data-view="years next"],
+.datepicker-panel > ul > li[data-view="year next"],
+.datepicker-panel > ul > li[data-view="month next"],
+.datepicker-panel > ul > li[data-view="next"] {
+  font-size: 18px;
+}
+
+.datepicker-panel > ul > li[data-view="years current"],
+.datepicker-panel > ul > li[data-view="year current"],
+.datepicker-panel > ul > li[data-view="month current"] {
+  width: 150px;
+}
+
+.datepicker-panel > ul[data-view="years"] > li,
+.datepicker-panel > ul[data-view="months"] > li {
+  height: 52.5px;
+  line-height: 52.5px;
+  width: 52.5px;
+}
+
+.datepicker-panel > ul[data-view="week"] > li,
+.datepicker-panel > ul[data-view="week"] > li:hover {
+  background-color: #fff;
   cursor: default;
-  font-weight: bold;
-  color: gray;
 }
-.qs-datepicker .qs-square:not(.qs-empty):not(.qs-disabled):not(.qs-day):hover {
-  background: orange;
+
+.datepicker-hide {
+  display: none;
 }
