--- a/posts/static/posts/css/homepage.css
+++ b/posts/static/posts/css/homepage.css
@@ -128,10 +128,35 @@ margin-top:20px;
 }
 
 #left-side .jumbotron p{
+font-size:15px;
 
-margin:20px;
 }
 
+#left-side .most-seen-post{
+width:100%;
+height:100%;
+overflow: hidden;
+padding:10px;
+}
+
+#left-side .most-seen-post .img-of-most-seen-post{
+
+float:right;
+width:20%;
+
+}
+#left-side .most-seen-post .img-of-most-seen-post img{
+
+width:40px;
+height:40px;
+border-radius:100%;
+
+}
+#left-side .most-seen-post .header-of-most-seen-post{
+float:left;
+width:80%;
+
+}
 @media only screen and (max-width:966px){
 
 #main,#homepage-container-fluid{
