--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -39,6 +39,36 @@
 
 
             </div>
+            {% if user.is_authenticated %}
+            <div class="container" id="recommended-posts-container">
+                <span id="recommended-posts-heading">پست های پیشنهادی ما به {{user.username}}</span>
+                <br>
+                <br>
+                <div class="row">
+                    <div class="col-md-3 col-sm-3 col-xs-12">
+
+     <img src="{{favourite_post1.img.url}}" class="img-responsive">
+                        <h3>{{favourite_post1.header}}</h3>
+                    </div>
+                    <div class="col-md-3 col-sm-3 col-xs-12">
+
+                        <img src="{{favourite_post2.img.url}}" class="img-responsive">
+                        <h3>{{favourite_post2.header}}</h3>
+                    </div>
+                    <div class="col-md-3 col-sm-3 col-xs-12">
+
+     <img src="{{favourite_post3.img.url}}" class="img-responsive">
+                        <h4>{{favourite_post3.header}}</h4>
+                    </div>
+                    <div class="col-md-3 col-sm-3 col-xs-12">
+     <img src="{{favourite_post4.img.url}}" class="img-responsive">
+                        <h3>{{favourite_post4.header}}</h3>
+
+                    </div>
+                </div>
+
+            </div>
+            {% endif %}
             <hr>
             <div id="author-info">
                 <div class="container-fluid">
