font added mql added pamm added login page edited

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -39,7 +39,7 @@
 
 
             </div>
-            {% if user.is_authenticated %}
+            {% if favourite_post1.header %}
             <div class="container" id="recommended-posts-container">
                 <span id="recommended-posts-heading">پست های پیشنهادی ما به {{user.username}}</span>
                 <br>
