--- a/specificpages/templates/specificpages/mql.html
+++ b/specificpages/templates/specificpages/mql.html
@@ -12,6 +12,47 @@
 
 {% block body %}
 
+<div class="container-fluid" id="mql-container">
+    <div id="mql-pdf">قبل از هرچیز به دوستانی که با mql5 آشنایی ندارید پیشنهام میکنم برروی mql-pdf کلیک کنند تا فایل pdf
+        آموزشی mql را مشاهده کنند.
+    </div>
+    <span id="mql-heading">
+  استراتژی معاملاتی گروه نوسان گلد
+    </span>
+    <p>لوریج بیشتر از 100 در نظر نگرفته شده و معاملات طوری طراحی شدن که ریسک معاملات (Maximum drawdown) به حدکثر 20%
+        سرمایه صدمه وارد میشود و استراتژی طوری طراحی شده که ماهانه سود خالص 10% برای مشتریان فراهم آورد.</p>
+    <br>
+    <span>برای نحوه وصل شدن به حساب میتوانید از راهنمایی های زیر استفاده کنید.</span>
+    <br>
+    <span class="heading">سیگنال های معاملاتی MQL5</span>
+    <p>مزایای تجارت با استفاده از سیگنال های MQL5 با navasangold
 
+        بدون نیاز به نصب، زیرا سرویس به حالت درون برنامه ای می باشد.</p>
+    <p>نصب و استفاده آسان بدون نیاز به مداخله معامله گر - معاملات به صورت خودکار کپی می شوند</p>
+    <span class="heading">نحوه تمدید اشتراک سیگنال ها</span>
+
+    <ul>
+        <li>۱-پلتفرم MT4 را راه اندازی کنید</li>
+        <li>۲-از قسمت "ترمینال"، بر روی نوار "سیگنال" کلیک کنید</li>
+        <li>۳-ارائه دهنده سیگنال خود را در فهرست از گزینه ها بیابید و بر روی آن دوبار کلیک کنید</li>
+        <li>۴-بر روی دکمه "تجدید اشتراک" واقع در بالای قسمت "ترمینال" کلیک کنید</li>
+    </ul>
+    <span class="heading">             نحوه لغو اشتراک از ارائه دهنده سیگنال ها
+</span>
+    <ul>
+        <li>۱-پلتفرم MT4 را راه اندازی کنید</li>
+        <li>۲-از قسمت "ترمینال"، بر روی نوار "سیگنال" کلیک کنید</li>
+        <li>۳-رائه دهنده سیگنال خود را در فهرست از گزینه ها بیابید و بر روی آن دوبار کلیک کنید</li>
+        <li>۴-بر روی دکمه "لغو اشتراک" واقع در بالای قسمت "ترمینال" کلیک کنید</li>
+    </ul>
+
+    <p>اشتراک سیگنال های معاملاتی به مدت یک ماه می باشدهر حساب تجاری تنها می تواند در هر زمان مشخص،مشترک یک ارائه دهنده
+        سیگنال باشد</p>
+    <p>ما توصیه می کنیم که شما قبل از هر گونه خرید در بازار MQL5، اول شرایط را امتحان کنیدفرآیند خرید شامل هیچ کارمزد
+        پنهان، کمیسیون، و یا افزایش اسپرد نمی باشد</p>
+
+    <p>ر خرید که انجام می دهید، می تواند در حداکثر 3 کامپیوتر استفاده شودوجوه را می توان از طریق PayPal، WebMoney، QIWI
+    </p>
+</div>
 
 {% endblock %}
