--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -103,7 +103,7 @@
 
 
                 </ul>
-                <p class="navbar-text navbar-right"><a href="/calender/" class="navbar-link">تقویم اقتصادی</a>
+                <p class="navbar-text navbar-right"><a href="/specificpages/calender/" class="navbar-link">تقویم اقتصادی</a>
                 </p>
 
 
@@ -178,15 +178,15 @@
                     </div>
                     <div class="form-group">
 
-          <span class="material-icons" style=""
+          <span class="material-icons"
           >lock</span>
                         <input class="form-control" id="password1" name="password1"
                                placeholder="رمز عبور"
 
-                               type="password" required/>
+                               type="password"  required/>
                     </div>
 
-                    <button class="btn btn-primary" type="submit" style="">ورود</button>
+                    <button class="btn btn-primary" type="submit" id="submit-button" style="">ورود</button>
                 </div>
 
 
@@ -220,13 +220,13 @@
                     <div class="row">
                         <div class="col-12">
 
-                            <a href="">
+                            <a href="/specificpages/about-us">
                                 درباره ما
                             </a>
-                            <a href="/contact/">
+                            <a href="/specificpages/contact/">
                                 تماس با ما
                             </a>
-                            <a href="">
+                            <a href="/specificpages/rules/">
                                 قوانین
                             </a>
                             <a href="">
@@ -244,7 +244,7 @@
                     <div class="row" id="social-network">
                         <div class="col-12">
 
-                            <a href="https:/www.telegram.com/"><img id="telegram-icon"
+                            <a href="https://t.me/signal_navasan"><img id="telegram-icon"
                                                                     src="{% static 'posts/img/telegram.png' %}"
                             ></a>
                             <a href="https://instagram.com/"><img id="instagram-icon"
@@ -265,8 +265,8 @@
     </div>
 </footer>
 </body>
-
 <script src="{% static 'posts/js/jquery.validate.js' %}"></script>
+
 <script src="{% static 'posts/js/base.js' %}"></script>
 
 {% block script %}
