--- a/users/static/users/css/login.css
+++ b/users/static/users/css/login.css
@@ -23,61 +23,12 @@ background-color:rgba(250,250,250,.5);
 
 margin:80px auto;
 
-display:table;
-max-width:650px;
+max-width:500px;
 padding:0px;
 }
-#info{
-
-display:table-cell;
-width:40%;
-text-align: left;
-vertical-align: top;
-padding:30px;
-border-left:4px solid #2D5DA1;
-
-}
-
-#info-header {
-text-align:center;
-font-size:22px;
-
-}
 
 
-#info-header a{
 
-font-size:25px;
-color:#000;
-
-
-}
-
-#info > ul{
-
-
-padding-right:0px;
-
-}
-#info > ul > li {
-
-list-style:none;
-text-align:right;
-font-size:17px;
-padding-bottom:10px;
-}
-
-#info ul > li span{
-
-padding-left:5px;
-
-}
-
-#info ul > li > .material-icons{
-position:relative;
-font-size:17px;
-
-}
 
 .description{
 margin:5px;
@@ -87,8 +38,8 @@ display:none;
 }
 
 #flexible-form{
-width:60%;
-display:table-cell;
+max-width:500px;
+max-height:400px;
 
 }
 
@@ -125,6 +76,7 @@ max-width:100%;
 }
 
 #login-container .form-control {
+
 border:1px solid rgb(30,144,255);
 border-radius:0px;
 padding-right:36px;
@@ -134,7 +86,14 @@ height:45px;
 
 #login-container input[type="submit"]{
 
+max-width:300px;
 padding-right:0px;
+
+
+border-radius:40px;
+background-color:#2D5DA1;
+color:#FFF;
+
 }
 
 #main-form input{
@@ -142,6 +101,14 @@ padding-right:0px;
 box-shadow:none;
 
 }
+
+.submit-form-group{
+
+
+text-align:center;
+
+}
+
 .form-group span{
 
 font-size:25px;
@@ -173,9 +140,15 @@ display:none;
 text-align:left;
 
 }
+span.material-icons,span.fa{
+
+font-size:25px;
+
+}
 #arrow-back-from-email-form,#arrow-back-from-message-div {
 display:block;
 position:relative;
+color:#2D5DA1;
 
 }
 
