--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -11,24 +11,8 @@
 
 <div class="container" id="login-container">
 
-    <div id="info">
-<div id="info-header">
-    <a >نوسان گلد</a>
-    <br>
-    <span> سایت تحلیلی خبری ارز </span>
-</div>
-        <ul>
-           <li><span class="material-icons">show_chart</span> چارت </li>
-            <li><span class="glyphicon glyphicon-signal"></span> نوسان های ارز</li>
-            <li><span class="glyphicon glyphicon-book"></span>آرشیو مقالات</li>
-            <li><span class="glyphicon glyphicon-calendar"></span> تقویم اقتصادی</li>
 
 
-
-
-        </ul>
-
-    </div>
     <div id="flexible-form">
 
 
@@ -83,17 +67,17 @@
 
             <div class="reset_password_form">
                 <div class="form-group">
-               <span class="material-icons ">contact_mail</span>
+               <span class="material-icons">contact_mail</span>
 
 
                 <input class="form-control" id="email" name="email" placeholder="ایمیل" autofocus=""
                        type="email">
 
                 </div>
-                 <div class="form-group">
+                 <div class="form-group submit-form-group">
 
-                <input class="form-control"  type="submit" style="width:100%;position:relative;"
-                       value="تایید">
+                <input class="form-control btn btn-sm"  type="submit" style="width:100%;position:relative;"
+                       value="ادامه">
             </div>
                 <span class="icon-holder">
                 <i class="material-icons" id="arrow-back-from-email-form" >arrow_back</i>
@@ -103,7 +87,7 @@
 
             <div class="login_form">
 
-  <div class="form-group">
+  <div class="form-group" >
                 <span class="fa fa-user-circle fa-fw"></span>
 
                 <input class="form-control" id="id_username" name="username" placeholder="نام کاربری"
@@ -112,7 +96,7 @@
             </div>
 
             <div class="form-group">
-                  <span class="material-icons" style="font-size:25px;"
+                  <span class="material-icons"
                   >lock</span>
                 <input class="form-control" id="password" name="password1" autofocus="" placeholder="رمز عبور"
 
@@ -122,13 +106,15 @@
 
 
 
-             <div class="form-group">
+             <div class="form-group submit-form-group" >
 
-                <input class="form-control"  type="submit" style="width:100%;position:relative;"
+                <input class="form-control btn btn-sm"  type="submit" style="width:100%;position:relative;"
                        value="تایید">
             </div>
+
                 <a id="show_password_form"> پسورد خود را فراموش کرده اید؟ </a>
                 </div>
+
    {% endblock %}
 
         </form>
