--- a/specificpages/templates/specificpages/rules.html
+++ b/specificpages/templates/specificpages/rules.html
@@ -19,7 +19,7 @@
 <ul>
 
     <li> این وب سایت تابع قوانین جمهوری اسلامی ایران می باشد.</li>
-    <li>  کلیهٔ حقوق مادی و معنوی محتوای سایت متعلق به سکان نوسان گلد بوده که از طریق دامنهٔ navasangold.com در دسترس کاربران می‌باشد.</li>
+    <li>  کلیهٔ حقوق مادی و معنوی محتوای سایت متعلق به  نوسان گلد بوده که از طریق دامنهٔ navasangold.com در دسترس کاربران می‌باشد.</li>
     <li> توهین به هر شخص ،  نژاد ، قوم و زبانی در این سایت ممنوع می باشد.</li>
     <li>لطفا از بحث ها تفرقه انگیز بین اقوام ایرانی و طرح مطالبی که موجب ایجاد تنش بین اعضای سایت می گردد خودداری شود.</li>
 
