some file moved static root added

--- a/posts/templates/posts/calender.html
+++ b/posts/templates/posts/calender.html
@@ -6,8 +6,8 @@
 {% load staticfiles %}
 
 {% block style %}
-<link rel="stylesheet" href="{% static 'specificpages/css/calender.css' %}">
-<link  href="{% static 'specificpages/css/datepicker.css' %}" rel="stylesheet">
+<link rel="stylesheet" href="{% static 'posts/css/calender.css' %}">
+<link  href="{% static 'posts/css/datepicker.css' %}" rel="stylesheet">
 
 
 {% endblock %}
@@ -42,7 +42,7 @@
 
 {% block script %}
 
-<script src="{% static 'specificpages/js/datepicker.js' %}"></script>
-<script src="{% static 'specificpages/js/calenderpage_jQ.js' %}"></script>
-<script src="{% static 'specificpages/js/calenderpage_java.js' %}"></script>
+<script src="{% static 'posts/js/datepicker.js' %}"></script>
+<script src="{% static 'posts/js/calenderpage_jQ.js' %}"></script>
+<script src="{% static 'posts/js/calenderpage_java.js' %}"></script>
 {% endblock %}
