--- a/users/templates/users/GuestContact.html
+++ b/users/templates/users/GuestContact.html
@@ -3,7 +3,7 @@
 
 
 {% block style %}
-<link rel="stylesheet" type="text/css" href="{% static 'specificpages/css/GuestContact.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'users/css/GuestContact.css' %}"/>
 {% endblock %}
 
 {% block title %}
