--- a/users/templates/users/UsersContact.html
+++ b/users/templates/users/UsersContact.html
@@ -3,7 +3,7 @@
 
 
 {% block style %}
-<link rel="stylesheet" type="text/css" href="{% static 'specificpages/css/UsersContact.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% users 'specificpages/css/UsersContact.css' %}"/>
 {% endblock %}
 
 {% block title %}
