--- a/users/templates/users/reset_password_confirm.html
+++ b/users/templates/users/reset_password_confirm.html
@@ -52,16 +52,5 @@
 
 {% endblock %}
 {% block script %}
-<script>
-
-    $(document).ready(function(){
-$("#left-side-toggle-open").css("display","none");
-if ($('#complete-checker').val()){
-
-$('#main-form').css('display','none');
-$('.description').fadeToggle();
-$('.description span').html($('#complete-checker').val());
-}
-});
-</script>
+<script src="{% static 'users/js/reset_password_confirm.js' %}"></script>
 {% endblock %}
