--- a/users/templates/users/reset_password_email.html
+++ b/users/templates/users/reset_password_email.html
@@ -7,7 +7,7 @@
 <body>
 <span style="font-size:20px;"> عزیز{{username}}</span>
 <p>لطفا روی لینک زیر کلیک کرده و وارد صفحه ی تغییر پسورد شوید.در آن جا میتوانید رمز عبور جدید خود را ثبت کنید.</p>
-<a href="http://navasangold.com/user/reset-password/confirm/{{token}}">http://navasangold.com/user/reset-password/confirm/{{token}}</a>
+<a href="https://navasangold.com/user/reset-password/confirm/{{token}}/{{user_id}}">http://navasangold.com/user/reset-password/confirm/{{token}}</a>
 <hr>
 <span>navasangold.com</span>
 
